logs/dag_id=Cricbuzz_ETL/run_id=manual__2023-12-09T02:52:06.603992+00:00/task_id=Create_balls_table/attempt=1.log
[2023-12-09T08:22:09.144+0530] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Cricbuzz_ETL.Create_balls_table manual__2023-12-09T02:52:06.603992+00:00 [queued]>
[2023-12-09T08:22:09.147+0530] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Cricbuzz_ETL.Create_balls_table manual__2023-12-09T02:52:06.603992+00:00 [queued]>
[2023-12-09T08:22:09.148+0530] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-09T08:22:09.157+0530] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): Create_balls_table> on 2023-12-09 02:52:06.603992+00:00
[2023-12-09T08:22:09.161+0530] {standard_task_runner.py:57} INFO - Started process 29784 to run task
[2023-12-09T08:22:09.162+0530] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'Cricbuzz_ETL', 'Create_balls_table', 'manual__2023-12-09T02:52:06.603992+00:00', '--job-id', '23', '--raw', '--subdir', 'DAGS_FOLDER/Crickbuzz_dag.py', '--cfg-path', '/tmp/tmpdt7okns8']
[2023-12-09T08:22:09.163+0530] {standard_task_runner.py:85} INFO - Job 23: Subtask Create_balls_table
[2023-12-09T08:22:09.183+0530] {task_command.py:416} INFO - Running <TaskInstance: Cricbuzz_ETL.Create_balls_table manual__2023-12-09T02:52:06.603992+00:00 [running]> on host Iris
[2023-12-09T08:22:09.219+0530] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='Cricbuzz_ETL' AIRFLOW_CTX_TASK_ID='Create_balls_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-09T02:52:06.603992+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-09T02:52:06.603992+00:00'
[2023-12-09T08:22:09.220+0530] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS Ball_by_ball_data(
            "match_id" NUMERIC PRIMARY KEY,
            "ball" TEXT,
            "Commentary Text" TEXT,
            "innings" TEXT, 
            "match_no TEXT",
            "batting_team" TEXT,
            "bowling_team"TEXT,      
            "Batsman" TEXT,
            "Bowler" TEXT,
            "runs" TEXT, 
            "extra" TEXT, 
            "ball_length" TEXT, 
            "ball_line" TEXT,
            "ball_destination" TEXT, 
            "shot_name" TEXT, 
            "ball_speed" TEXT,
            "out_type TEXT"
        );
[2023-12-09T08:22:09.231+0530] {base.py:73} INFO - Using connection ID 'Cricbuzz_db' for task execution.
[2023-12-09T08:22:09.443+0530] {base.py:73} INFO - Using connection ID 'Cricbuzz_db' for task execution.
[2023-12-09T08:22:09.447+0530] {sql.py:432} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS Ball_by_ball_data(
            "match_id" NUMERIC PRIMARY KEY,
            "ball" TEXT,
            "Commentary Text" TEXT,
            "innings" TEXT, 
            "match_no TEXT",
            "batting_team" TEXT,
            "bowling_team"TEXT,      
            "Batsman" TEXT,
            "Bowler" TEXT,
            "runs" TEXT, 
            "extra" TEXT, 
            "ball_length" TEXT, 
            "ball_line" TEXT,
            "ball_destination" TEXT, 
            "shot_name" TEXT, 
            "ball_speed" TEXT,
            "out_type TEXT"
        );, parameters: None
[2023-12-09T08:22:09.448+0530] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/rajabala/Desktop/projects/Airflow/airflow_env/lib/python3.9/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/rajabala/Desktop/projects/Airflow/airflow_env/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/rajabala/Desktop/projects/Airflow/airflow_env/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 7:             "match_no TEXT",
                                   ^

[2023-12-09T08:22:09.450+0530] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Cricbuzz_ETL, task_id=Create_balls_table, execution_date=20231209T025206, start_date=20231209T025209, end_date=20231209T025209
[2023-12-09T08:22:09.460+0530] {standard_task_runner.py:104} ERROR - Failed to execute job 23 for task Create_balls_table (syntax error at or near ","
LINE 7:             "match_no TEXT",
                                   ^
; 29784)
[2023-12-09T08:22:09.495+0530] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-09T08:22:09.516+0530] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
